fix cropped graph on mobile

--- a/src/components/organisms/AssetActions/Pool/Graph.module.css
+++ b/src/components/organisms/AssetActions/Pool/Graph.module.css
@@ -3,8 +3,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: calc(var(--spacer) / 6) -2rem calc(var(--spacer) / 1.5) -2rem;
+  margin: calc(var(--spacer) / 6) -1.35rem calc(var(--spacer) / 1.5) -1.35rem;
   position: relative;
+}
+
+@media (min-width: 40rem) {
+  .graphWrap {
+    margin-left: -2rem;
+    margin-right: -2rem;
+  }
 }
 
 .graphWrap canvas {
